--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "laravelcollective/html": "5.3.*",
-        "intervention/image": "^2.3"
+        "intervention/image": "^2.3",
+        "php-academy/filters": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -48,5 +49,11 @@
     },
     "config": {
         "preferred-install": "dist"
+    },
+    "repositories": {
+        "inchoostripe": {
+            "type": "git",
+            "url": "https://github.com/ivanweiler/phpacademy-image-filters.git"
+        }
     }
 }
